[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Controllers/UIController/Implementations/LoadingModal/LoadingModal.gd" id="1_script"]

[node name="LoadingModal" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -75.0
offset_right = 150.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Initializing Session..."
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
max_value = 100.0
value = 0.0
show_percentage = false

[node name="StageLabel" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Loading..."
horizontal_alignment = 1
